# MoA-PD-modeling-demo

./: .gitignore  Makefile  README.md  pyproject.toml
demo_outputs/: base_signaling_compiled_model.json  base_signaling_graph.json  base_signaling_simulation.json  base_signaling_timecourse.csv  cbl_degradation_compiled_model.json  cbl_degradation_graph.json  cbl_degradation_simulation.json  cbl_degradation_timecourse.csv  cbl_module_only_compiled_model.json  cbl_module_only_graph.json  cbl_module_only_simulation.json  cbl_module_only_timecourse.csv  comparison_summary.json  direct_kinase_inhibition_compiled_model.json  direct_kinase_inhibition_graph.json  direct_kinase_inhibition_simulation.json  direct_kinase_inhibition_timecourse.csv  downstream_pathway_blockade_compiled_model.json  downstream_pathway_blockade_graph.json  downstream_pathway_blockade_simulation.json  downstream_pathway_blockade_timecourse.csv  ligand_blockade_compiled_model.json  ligand_blockade_graph.json  ligand_blockade_simulation.json  ligand_blockade_timecourse.csv  new_moa_claim_demo.json
docs/: PMC3693219.json  executable-paper-moa-graph-roadmap.md  north-star-type-organization.md  paper-annotation-moa-graph-plan.md  paper-annotation-moa-graph-remaining-work.md  paper-annotation-moa-graph-summary.md
scripts/: build_curated_paper_moa_graph.py  build_paper_evidence_graph.py  build_paper_moa_graph_summary.py  demo.py  evaluate_predictor.py  import_paper_annotations.py  propose_pathway_from_annotations.py
tests/: test_annotation_evidence_graph.py  test_annotation_loader.py  test_api_e2e.py  (+5 more)
(+70 files in other folders)
